# tools-cargocleaner

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
test_cases/invalid_toml/: invalid.toml
